--- a/bowtie2/2.5.4/Dockerfile
+++ b/bowtie2/2.5.4/Dockerfile
@@ -20,10 +20,10 @@ RUN if [ $(uname -m) = x86_64 ] ; then arch=x86_64; \
     elif [ $(uname -m) = aarch64 ] ; then arch=aarch64; \
     else echo "Architecture $(uname -m) is not supported" >&2; exit 1; \
     fi &&  wget https://github.com/BenLangmead/bowtie2/releases/download/v${software_version}/bowtie2-${software_version}-linux-${arch}.zip \
-    && unzip bowtie2-{software_version}-linux-${arch}.zip \
-    && rm bowtie2-{software_version}-linux-${arch}.zip
+    && unzip bowtie2-${software_version}-linux-${arch}.zip \
+    && rm bowtie2-${software_version}-linux-${arch}.zip
 
-ENV PATH="/opt/bowtie2-{software_version}-linux-${arch}/:${PATH}"
+ENV PATH="/opt/bowtie2-${software_version}-linux-${arch}/:${PATH}"
 
 CMD ["/bin/sh"]
 
