--- a/i2nca/0.3.0/Dockerfile
+++ b/i2nca/0.3.0/Dockerfile
@@ -27,16 +27,21 @@ RUN apt-get update && apt-get install -y \
     libgl1 \
     git \
     && apt-get clean \
-    && rm -rf /var/lib/apt/lists/* \
-
-RUN pip install --upgrade pip && \
-    pip install numpy==1.24 && \
-    pip install pandas==2.1 && \
-    pip install matplotlib==3.7 && \
-    pip install scipy==1.12 && \
-    pip install m2aia==0.5.1 \
-
+    && rm -rf /var/lib/apt/lists/*
+    
+RUN pip install --no-cache-dir --upgrade pip && \
+    pip install --no-cache-dir numpy==1.24 && \
+    pip install --no-cache-dir pandas==2.1 && \
+    pip install --no-cache-dir matplotlib==3.7 && \
+    pip install --no-cache-dir scipy==1.12 && \
+    pip install --no-cache-dir m2aia==0.5.1
+    
 RUN pip install git+https://github.com/cKNUSPeR/pyimzml.git#egg=pyimzml && \
-    pip install git+https://github.com/cKNUSPeR/i2nca.git#egg=i2nca \
-
+    pip install git+https://github.com/cKNUSPeR/i2nca.git#egg=i2nca
+    
+RUN groupadd -g 1001 biodockergroup && \
+    useradd -g biodockergroup -u 1001 biodocker
+    
 USER biodocker
+
+
