--- a/ncbi-datasets-cli/16.22.1/Dockerfile
+++ b/ncbi-datasets-cli/16.22.1/Dockerfile
@@ -14,7 +14,7 @@ LABEL about.home="https://www.ncbi.nlm.nih.gov/datasets"
 LABEL about.software="https://www.ncbi.nlm.nih.gov/datasets"
 LABEL about.documentation="https://www.ncbi.nlm.nih.gov/datasets/docs/"
 LABEL about.license="public_domain"
-LABEL about.licence_file="https://github.com/ncbi/datasets/blob/master/LICENSE.md"
+LABEL about.license_file="https://github.com/ncbi/datasets/blob/master/LICENSE.md"
 LABEL about.author="NCBI"
 LABEL extra.identifiers.biotools="ncbi_datasets"
 
