new bowtie2 docker base

--- a/bowtie2/2.5.4/Dockerfile
+++ b/bowtie2/2.5.4/Dockerfile
@@ -1,25 +1,8 @@
-FROM debian:bookworm-slim
-
+FROM continuumio/miniconda3
 MAINTAINER Sebastian Bassi <sebastian@toyoko.io>
 LABEL    software="bowtie2"
 
 ARG software_version=2.5.4
-
-RUN apt-get update
-RUN apt-get install -y wget && rm -rf /var/lib/apt/lists/*
-
-ENV PATH="/root/miniconda3/bin:${PATH}"
-ARG PATH="/root/miniconda3/bin:${PATH}"
-RUN apt-get update
-RUN apt-get install -y wget && rm -rf /var/lib/apt/lists/*
-
-RUN if [ $(uname -m) = x86_64 ] ; then arch=x86_64; \
-    elif [ $(uname -m) = aarch64 ] ; then arch=aarch64; \
-    else echo "Architecture $(uname -m) is not supported" >&2; exit 1; \
-    fi && wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-${arch}.sh \
-    && mkdir /root/.conda \
-    && bash Miniconda3-latest-Linux-${arch}.sh -b \
-    && rm -f Miniconda3-latest-Linux-${arch}.sh
 
 RUN conda config --add channels bioconda
 RUN conda install conda-forge::libgcc-ng
