--- a/bedtools/2.31.1+dfsg-2-deb/Dockerfile
+++ b/bedtools/2.31.1+dfsg-2-deb/Dockerfile
@@ -10,7 +10,7 @@ LABEL    software="bedtools" \
     version="1" \ 
     extra.identifiers.biotools="bedtools" \ 
     about.copyright=" 2009,2010,2011 Aaron Quinlan" \ 
-    about.license="GPL-2" \ 
+    about.license="MIT" \ 
     about.license_file="/usr/share/doc/bedtools/copyright" \ 
     extra.binaries="/usr/bin/annotateBed,/usr/bin/bamToBed,/usr/bin/bamToFastq,/usr/bin/bed12ToBed6,/usr/bin/bedToBam,/usr/bin/bedToIgv,/usr/bin/bedpeToBam,/usr/bin/bedtools,/usr/bin/closestBed,/usr/bin/clusterBed,/usr/bin/complementBed,/usr/bin/coverageBed,/usr/bin/expandCols,/usr/bin/fastaFromBed,/usr/bin/flankBed,/usr/bin/genomeCoverageBed,/usr/bin/getOverlap,/usr/bin/groupBy,/usr/bin/intersectBed,/usr/bin/linksBed,/usr/bin/mapBed,/usr/bin/maskFastaFromBed,/usr/bin/mergeBed,/usr/bin/multiBamCov,/usr/bin/multiIntersectBed,/usr/bin/nucBed,/usr/bin/pairToBed,/usr/bin/pairToPair,/usr/bin/randomBed,/usr/bin/shiftBed,/usr/bin/shuffleBed,/usr/bin/slopBed,/usr/bin/sortBed,/usr/bin/subtractBed,/usr/bin/tagBam,/usr/bin/unionBedGraphs,/usr/bin/windowBed,/usr/bin/windowMaker" \ 
     about.tags="field::biology, field::biology:bioinformatics, implemented-in::c++,:commandline, role::program, scope::suite, use::analysing,:comparing,:converting,:filtering,:biological-sequence" 
