--- a/mitohifi/3.2.2/Dockerfile
+++ b/mitohifi/3.2.2/Dockerfile
@@ -66,7 +66,7 @@ RUN wget -P /usr/local/src https://repo.anaconda.com/miniconda/Miniconda3-latest
     && $CONDA_DIR/bin/conda install -n base conda-libmamba-solver
 
 RUN $CONDA_DIR/bin/conda create -n mitos_env -c bioconda -c conda-forge mitos=2.1.0 "r-base>4"
-RUN $CONDA_DIR/bin/conda create -n mitofinder_env --experimental-solver=libmamba python=2.7
+RUN $CONDA_DIR/bin/conda create -n mitofinder_env python=2.7
 
 RUN $CONDA_DIR/bin/conda clean -a
 
