--- a/mitohifi/3.2.2-code/Dockerfile
+++ b/mitohifi/3.2.2-code/Dockerfile
@@ -20,3 +20,4 @@ ENV PATH /opt/wrappers:/opt/cdhit/:/opt/hifiasm-0.16.1/:/opt/MitoHiFi/src/:/opt/
 
 # This is a patch for https://github.com/Edinburgh-Genome-Foundry/DnaFeaturesViewer/issues/88
 COPY BiopythonTranslatorBase.py /usr/local/lib/python3.6/dist-packages/dna_features_viewer/BiopythonTranslator/BiopythonTranslatorBase.py
+COPY getGenesList.py /opt/MitoHiFi/src/getGenesList.py
