--- a/rsat/20240828/Dockerfile
+++ b/rsat/20240828/Dockerfile
@@ -96,7 +96,7 @@ WORKDIR /packages
 
 
 ## <----  Actually clone RSAT repository into your working dir and rename to rsat
-RUN git clone https://github.com/rsa-tools/rsat-code.git --branch 20240828 --single-branch
+RUN git clone https://github.com/rsa-tools/rsat-code.git --branch 2024-08-28c --single-branch
 RUN mv rsat-code rsat
 
 # Repositories 'demo_files' and 'sample_ouput' are skipped to save space
