--- a/bwa/0.7.17-7-deb/Dockerfile
+++ b/bwa/0.7.17-7-deb/Dockerfile
@@ -1,13 +1,13 @@
-FROM debian:trixie-slim
+FROM debian:bookworm-slim
 
 MAINTAINER Sebastian Bassi <sebastian@toyoko.io>
 LABEL    software="bwa" \ 
-    base_image="debian:trixie-slim" \ 
+    base_image="debian:bookworm-slim" \ 
     container="bwa" \ 
     about.summary="Burrows-Wheeler Aligner" \ 
     about.home="http://bio-bwa.sourceforge.net/" \ 
-    software.version="0.7.18-1-deb" \ 
-    upstream.version="0.7.18" \ 
+    software.version="0.7.17-7-deb" \ 
+    upstream.version="0.7.17" \ 
     version="1" \ 
     extra.identifiers.biotools="bwa" \ 
     about.copyright=" 2008 Genome Research Ltd (GRL)" \ 
@@ -18,4 +18,4 @@ LABEL    software="bwa" \
 
 USER root
 ENV DEBIAN_FRONTEND noninteractive
-RUN apt-get update && apt-get install -y bwa=0.7.18-1-deb && apt-get clean && apt-get purge && rm -rf /var/lib/apt/lists/* /tmp/*
+RUN apt-get update && apt-get install -y bwa=0.7.17-7-deb && apt-get clean && apt-get purge && rm -rf /var/lib/apt/lists/* /tmp/*
