--- a/biopython/1.84-pip/Dockerfile
+++ b/biopython/1.84-pip/Dockerfile
@@ -15,5 +15,8 @@ LABEL    software="biopython" \
 
 USER root
 ENV DEBIAN_FRONTEND noninteractive
-RUN apt-get update && apt-get install -y python3-pip && apt-get clean && apt-get purge && rm -rf /var/lib/apt/lists/* /tmp/*
-RUN pip install biopython==1.84
+RUN apt update && apt-get install -y python3-pip python3-venv && apt clean && apt purge && rm -rf /var/lib/apt/lists/* /tmp/*
+RUN python3 -m venv biopython && . biopython/bin/activate && pip install biopython==1.84
+
+# Since this is installed in a venv, run with:
+# docker run -it dnalinux/biopython:1.84 /biopython/bin/python
