--- a/micro-sam/1.1.1/Dockerfile
+++ b/micro-sam/1.1.1/Dockerfile
@@ -35,10 +35,8 @@ ENV PATH="$MAMBA_ROOT_PREFIX/bin:$PATH"
 USER root
 
 # clone the repository and install the package
-RUN git clone https://github.com/computational-cell-analytics/micro-sam.git \
-    && cd micro-sam \
-    && git checkout 9b055c3 \
-    && pip install -e .
+RUN pip install git+https://github.com/computational-cell-analytics/micro-sam.git@9b055c3
+
 
 
 
